--- a/sparcs.org
+++ b/sparcs.org
@@ -1,13 +1,20 @@
 server {
-  listen 80;
-
+	listen 80;
 	server_name sparcs.org;
 
 	location / {
-    proxy_pass http://localhost:10000;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
+			proxy_set_header Host                 $http_host;
+			proxy_set_header X-Real-IP            $remote_addr;
+			proxy_set_header X-Forwarded-For      $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto    $scheme;
+			proxy_set_header X-NginX-Proxy        true;
+			proxy_set_header Upgrade              $http_upgrade;
+			proxy_set_header Connection           $http_connection;
+			proxy_set_header Origin               '';
+			proxy_http_version 1.1;
+
+			proxy_redirect off;
+			proxy_pass http://localhost:10000;
 	}
 }
+
